--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3.8'
 services:
   vprodb:
-    image: vprocontainers/vprofiledb
+    image: andrei9310/vprofiledb
+    container_name: vprodb
     ports:
       - "3306:3306"
     volumes:
@@ -23,16 +24,17 @@ services:
       - RABBITMQ_DEFAULT_PASS=guest
 
   vproapp:
-    image: vprocontainers/vprofileapp
+    image: andrei9310/vprofileapp
     ports:
-      - "8080:8080"
+      - "8084:8080"
     volumes: 
       - vproappdata:/usr/local/tomcat/webapps
 
   vproweb:
-    image: vprocontainers/vprofileweb
+    image: andrei9310/vprofileweb
     ports:
       - "80:80"
 volumes:
   vprodbdata: {}
   vproappdata: {}
+
