add cleanup docker

--- a/ProdPipeline/Jenkinsfile
+++ b/ProdPipeline/Jenkinsfile
@@ -24,6 +24,11 @@ pipeline {
         NEXUS_LOGIN = "nexuslogin"
     } 
     stages {
+        stage('Cleanup Workspace') {
+            steps {
+                 sh 'rm -rf build/ tmp/' // Adjust paths as necessary
+            }
+        }
         stage('Preparation') {
             steps {
                 script {
