--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -28,6 +28,12 @@ pipeline {
 
     } 
     stages {
+
+        stage('Cleanup Workspace') {
+            steps {
+                 sh 'rm -rf build/ tmp/' // Adjust paths as necessary
+            }
+        }
         stage('Preparation') {
             steps {
                 script {
