--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -140,12 +140,14 @@ pipeline {
                 }
             }
         }
-    stage("Deploy to ECS staging")
-            steps{
-                withAWS(credentials : "awscreds", region: "eu-central-1") {
-                    sh " aws ecs update-service --cluster ${cluster} --service ${service} --force-new-deployment"
-                }
-            }
+    stage("Deploy to ECS staging") {
+        steps {
+            withAWS(credentials: "awscreds", region: "eu-central-1") {
+            sh "aws ecs update-service --cluster ${cluster} --service ${service} --force-new-deployment"
+        }
+    }
+}
+
     stage("Cleanup Docker Images") {
             steps {
                 script {
