--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -103,25 +103,25 @@ pipeline {
                 }
             }
         }
-        // stage("UploadArtifact") { // Duplicated stage name corrected
-        //     steps {
-        //         nexusArtifactUploader(
-        //             nexusVersion: 'nexus3',
-        //             protocol: 'http',
-        //             nexusUrl: "${NEXUSIP}:${NEXUSPORT}",
-        //             groupId: 'QA',
-        //             version: "${env.BUILD_ID}-${env.BUILD_TIMESTAMP}",
-        //             repository: "${RELEASE_REPO}",
-        //             credentialsId: "${NEXUS_LOGIN}",
-        //             artifacts: [
-        //                 [artifactId: "vproapp",
-        //                  classifier: '',
-        //                  file: 'target/vprofile-v2.war',
-        //                  type: 'war']
-        //             ]
-        //         )
-        //     }
-        // }
+        stage("UploadArtifact") { // Duplicated stage name corrected
+            steps {
+                nexusArtifactUploader(
+                    nexusVersion: 'nexus3',
+                    protocol: 'http',
+                    nexusUrl: "${NEXUSIP}:${NEXUSPORT}",
+                    groupId: 'QA',
+                    version: "${env.BUILD_ID}-${env.BUILD_TIMESTAMP}",
+                    repository: "${RELEASE_REPO}",
+                    credentialsId: "${NEXUS_LOGIN}",
+                    artifacts: [
+                        [artifactId: "vproapp",
+                         classifier: '',
+                         file: 'target/vprofile-v2.war',
+                         type: 'war']
+                    ]
+                )
+            }
+        }
         stage("Build App Image") {
             steps {
                 script {
