new Jenkins file

--- a/ProdPipeline/Jenkinsfile
+++ b/ProdPipeline/Jenkinsfile
@@ -1,34 +1,25 @@
 def COLOR_MAP = [
     "SUCCESS": "good", // Corrected typo 'SUCCES' to 'SUCCESS'
-    "FAILURE": "danger",   
+    "FAILURE": "danger"   
 ]
 
 pipeline {
+    agent any // Make sure to define an agent. Assuming 'any' is appropriate for your setup.
     
     environment {
-      
         cluster = "vproapp-prod"
         service = "vproapp-prod-svc"
-
-
     } 
+    
     stages {
-
-        stage('Cleanup Workspace') {
+        stage("Deploy to ECS Prod") {
             steps {
-                 sh 'rm -rf build/ tmp/' // Adjust paths as necessary
+                withAWS(credentials: "awscreds", region: "eu-central-1") {
+                    sh "aws ecs update-service --cluster ${cluster} --service ${service} --force-new-deployment"
+                }
             }
         }
-      
-      
-    stage("Deploy to ECS Prod") {
-        steps {
-            withAWS(credentials: "awscreds", region: "eu-central-1") {
-            sh "aws ecs update-service --cluster ${cluster} --service ${service} --force-new-deployment"
-        }
     }
-}
-
 
     post {
         always {
@@ -36,12 +27,8 @@ pipeline {
             slackSend(
                 channel: '#jenkinscicd',
                 color: COLOR_MAP[currentBuild.currentResult],
-                message: "*${currentBuild.currentResult}:* Job ${env.JOB_NAME} build ${env.BUILD_NUMBER} \n More info at: ${env.BUILD_URL} "
+                message: "*${currentBuild.currentResult}:* Job ${env.JOB_NAME} build ${env.BUILD_NUMBER} \n More info at: ${env.BUILD_URL}"
             )
         }
     }
 }
-}
-
-
-        
