--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,32 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Code checkout
-        uses: actions/checkout@v4.1.3  # Use 'uses' keyword for actions
+        uses: actions/checkout@v4.1.3
         
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'  # Set up Java version
+          distribution: 'temurin'  # Java distribution
+
       - name: Maven test
         run: mvn test
 
       - name: Checkstyle
         run: mvn checkstyle:checkstyle
+
+      - name: Setup SonarQube
+        uses: warchant/setup-sonar-scanner@v7
+      
+      - name: SonarQube Scan
+        run: |
+          sonar-scanner \
+          -Dsonar.host.url=${{ secrets.SONAR_URL }} \
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+          -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }} \
+          -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
+          -Dsonar.sources=src/ \
+          -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ \
+          -Dsonar.junit.reportsPath=target/surefire-reports/ \
+          -Dsonar.jacoco.reportsPath=target/jacoco.exec \
+          -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml
