--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -140,13 +140,13 @@ pipeline {
                 }
             }
         }
-//     stage("Deploy to ECS staging") {
-//         steps {
-//             withAWS(credentials: "awscreds", region: "eu-central-1") {
-//             sh "aws ecs update-service --cluster ${cluster} --service ${service} --force-new-deployment"
-//         }
-//     }
-// }
+    stage("Deploy to ECS staging") {
+        steps {
+            withAWS(credentials: "awscreds", region: "eu-central-1") {
+            sh "aws ecs update-service --cluster ${cluster} --service ${service} --force-new-deployment"
+        }
+    }
+}
 
     stage("Cleanup Docker Images") {
             steps {
