--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -103,7 +103,7 @@ jobs:
         with:
           task-definition: ${{ env.ECS_TASK_DEFINITION}}
           container-name: ${{ env.CONTAINER_NAME}}
-          image: ${{ steps.build-image.outputs.image }}
+          image: ${{ secrets.REGYSTRY}}/${{env.ECR_REPOSITORY}}:${{ gitbub.run_number }}
   
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
