--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -111,6 +111,6 @@ jobs:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
           service: ${{ env.ECS_SERVICE}}
           cluster: ${{ env.ECS_CLUSTER}}
-          wait-for-service-stability: true
+          wait-for-service-stability: false
         
             
