--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Hprofile Actions
 
-on: workflow_dispatch
+on: [push,workflow_dispatch]
 env: 
   AWS_REGION: eu-central-1
   ECR-REPOSITORY: vprofileappimg
