--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: Hprofile Actions
 
 on: [push,workflow_dispatch]
 env: 
-  AWS_REGION: eu-central-1
+  AWS_REGION: us-central-1
   ECR-REPOSITORY: vprofileappimg
-  ECS_SERVICE: vproapp-actions
+  ECS_SERVICE: vproapp-actions-svc
   ECS_CLUSTER: vpros-cluster-actions
   ECS_TASK_DEFINITION: aws-files/taskdeffile.json
   CONTAINER_NAME: vproapp
