--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,12 +67,17 @@ jobs:
           sed -i "s/db01/${{ secrets.RDS_ENDPOINT }}/" src/main/resources/application.properties
 
       - name: Build & Upload image to ECR
-        run: |
-          docker build -t myimage .
-          docker tag myimage ${{ secrets.REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
-          docker tag myimage ${{ secrets.REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.run_number }}
-          docker push ${{ secrets.REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
-          docker push ${{ secrets.REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.run_number }}
+        uses: appleboy/docker-ecr-action@master
+        with:
+          access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          registry: ${{ secrets.REGISTRY }}
+          repo: ${{ env.ECR_REPOSITORY }}
+          region: ${{ env.AWS_REGION }}
+          tags: latest,${{ github.run_number }}
+          daemon_off: false
+          dockerfile: ./Dockerfile
+          context: ./
   
   Deploy:
     needs: BUILD_AND_PUBLISH
@@ -96,9 +101,9 @@ jobs:
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: ${{ env.ECS_TASK_DEFINITION }}
-          container-name: ${{ env.CONTAINER_NAME }}
-          image: ${{ secrets.REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.run_number }}
+          task-definition: ${{ env.ECS_TASK_DEFINITION}}
+          container-name: ${{ env.CONTAINER_NAME}}
+          image: ${{ secrets.REGYSTRY}}/${{env.ECR_REPOSITORY}}:${{ github.run_number }}
   
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
@@ -107,5 +112,7 @@ jobs:
           service: ${{ env.ECS_SERVICE}}
           cluster: ${{ env.ECS_CLUSTER}}
           wait-for-service-stability: false
+        
+            
         
             
