--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,6 +74,7 @@ jobs:
           registry: ${{ secrets.REGISTRY }}
           repo: ${{ env.ECR_REPOSITORY }}
           region: ${{ env.AWS_REGION }}
+          tags: latest
           daemon_off: false
           dockerfile: ./Dockerfile
           context: ./
