--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Hprofile Actions
 on: [push,workflow_dispatch]
 env: 
   AWS_REGION: eu-central-1
-  ECR-REPOSITORY: vprofileappimg
+  ECR-REPOSITORY: vproappimg-actions
   ECS_SERVICE: vproapp-actions-svc
   ECS_CLUSTER: vpros-cluster-actions
   ECS_TASK_DEFINITION: aws-files/taskdeffile.json
