--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,10 @@
 name: Hprofile Actions
 
-on: [push,workflow_dispatch]
+on: [push, workflow_dispatch]
+
 env: 
   AWS_REGION: eu-central-1
-  ECR-REPOSITORY: vproappimg-actions
+  ECR_REPOSITORY: vproappimg-actions
   ECS_SERVICE: vproapp-actions-svc
   ECS_CLUSTER: vpros-cluster-actions
   ECS_TASK_DEFINITION: aws-files/taskdeffile.json
@@ -15,12 +16,12 @@ jobs:
     steps:
       - name: Code checkout
         uses: actions/checkout@v4.1.3
-        
+
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          java-version: '11'  # Set up Java version
-          distribution: 'temurin'  # Java distribution
+          java-version: '11'
+          distribution: 'temurin'
 
       - name: Maven test
         run: mvn test
@@ -30,28 +31,27 @@ jobs:
 
       - name: Setup SonarQube
         uses: warchant/setup-sonar-scanner@v7
-      
+
       - name: SonarQube Scan
         run: |
           sonar-scanner \
-          -Dsonar.host.url=${{ secrets.SONAR_URL }} \
-          -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-          -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }} \
-          -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
-          -Dsonar.sources=src/ \
-          -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ \
-          -Dsonar.junit.reportsPath=target/surefire-reports/ \
-          -Dsonar.jacoco.reportsPath=target/jacoco.exec \
-          -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml
+            -Dsonar.host.url=${{ secrets.SONAR_URL }} \
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }} \
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
+            -Dsonar.sources=src/ \
+            -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ \
+            -Dsonar.junit.reportsPath=target/surefire-reports/ \
+            -Dsonar.jacoco.reportsPath=target/jacoco.exec \
+            -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml
 
       - name: SonarQube Quality Gate check
         id: sonarqube-quality-gate-check
         uses: sonarsource/sonarqube-quality-gate-action@master
-          # Force to fail step after specific time.
-        timeout-minutes: 5
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }} #OPTIONAL
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        timeout-minutes: 5
 
   BUILD_AND_PUBLISH:
     needs: Testing
@@ -62,8 +62,8 @@ jobs:
 
       - name: Update application.properties file
         run: |
-          sed -i "s/^jdbc.username.*$/jdbc.username\=${{ secrets.RDS_USER }}/" src/main/resources/application.properties
-          sed -i "s/^jdbc.password.*$/jdbc.password\=${{ secrets.RDS_PASS }}/" src/main/resources/application.properties
+          sed -i "s/^jdbc.username.*$/jdbc.username=${{ secrets.RDS_USER }}/" src/main/resources/application.properties
+          sed -i "s/^jdbc.password.*$/jdbc.password=${{ secrets.RDS_PASS }}/" src/main/resources/application.properties
           sed -i "s/db01/${{ secrets.RDS_ENDPOINT }}/" src/main/resources/application.properties
 
       - name: Build & Upload image to ECR
@@ -78,40 +78,39 @@ jobs:
           daemon_off: false
           dockerfile: ./Dockerfile
           context: ./
-  
+
   Deploy:
     needs: BUILD_AND_PUBLISH
     runs-on: ubuntu-latest
     steps:
       - name: Code checkout
         uses: actions/checkout@v4.1.3
-  
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-central-1
-  
+
       - name: Login to Amazon ECR
-        id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-  
+
       - name: Fill in the new image ID in the Amazon ECS task definition
-        id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: ${{ env.ECS_TASK_DEFINITION}}
-          container-name: ${{ env.CONTAINER_NAME}}
-          image: ${{ secrets.REGYSTRY}}/${{env.ECR_REPOSITORY}}:${{ github.run_number }}
-  
+          task-definition: ${{ env.ECS_TASK_DEFINITION }}
+          container-name: ${{ env.CONTAINER_NAME }}
+          image: ${{ secrets.REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.run_number }}
+
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: ${{ env.ECS_SERVICE}}
-          cluster: ${{ env.ECS_CLUSTER}}
+          service: ${{ env.ECS_SERVICE }}
+          cluster: ${{ env.ECS_CLUSTER }}
           wait-for-service-stability: false
+
         
             
         
